# ctspk-fastapi

./: .gitignore  DECIMAL_FIELDS_ANALYSIS.md  DECIMAL_FORMATTING_IMPLEMENTATION.md  EMAIL_NOTIFICATION_SETUP.md  Makefile  NOTIFICATION_ANALYSIS_ORDER_93.md  NOTIFICATION_FIX_IMPLEMENTATION.md  NOTIFICATION_INTEGRATION_GUIDE.md  ORDER_EMAIL_CRON_SETUP.md  QUICK_START_CRON.md  QueriesIssue.md  README.md  alter_db.py  alter_db2.py  backfill_shop_earnings.py  coding_my_way_of_fastapi.md  filterfunction.py  images_doc.md  neon_backup.sql  product_import_sample.xlsx  pyproject.toml  requirements_cron.txt  sqltable.sql  test_cart_app.py  test_decimal_formatting.py  test_notification_fix.py  test_order_email.py  verify_order_79_earnings.sql  verify_order_earnings.py
.github/workflows/: deploy.yaml
migrations/: env.py
migrations/versions/: 0851668df893_create_import_product_model.py  0bbef801be97_category_rootid_default_none.py  0dc3fed8abc3_create_import_product_model.py  0e5563ac2794_update_role_table.py  0ea8c1987c29_create_variation_options_table.py  115650bd0764_categories_added.py  16761de68842_remove_group_product.py  187f30b1cde4_create_purchae_product_import_changes.py  1c6ec4aa3525_cart_variation_option_add.py  20e2c9962b5a_shop_model_added.py  21fbcb5bdffb_user_id_in_role.py  2d1601baaa2a_cart_added.py  32cf0938f965_user_shop_issue.py  381927433838_enum_order.py  3be62b095b1a_add_actual_amount_to_orders.py  3d5536b0a9dc_manufacturer_and_banner_added.py  4f0d69165d99_create_contactus_table.py  (+58 more)
scripts/: generate_sample_excel.py
src/: config.py  main.py
(+156 files in other folders)
