[project]
name = "shop-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt>=3.2.0,<4.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]
# [tool.pyright]
# include = ["src"]
# pythonVersion = "3.12"
# venvPath = "."
# venv = ".venv"
# typeCheckingMode= "basic"
# # 🔽 disable noisy errors
# reportArgumentType = "none"       # no more "arg-type" errors

